Elide has unexpected effect on Text's implicitWidth

The elided string was used to calculate the implicitWidth rather than
the full string.

Change-Id: I51b8800b47d4e32f4d5eef07c71df10e2df905b7
Task-number: QTBUG-18627
Reviewed-by: Michael Brasser